--- a/style.css
+++ b/style.css
@@ -52,7 +52,10 @@ html{
 }
 section{
     min-height: 100vh;
+    padding: 0 9%;
+    padding-top: 7.5rem;
 }
+
 
 /*header style start*/
 .header{
@@ -79,6 +82,39 @@ section{
     cursor: pointer;
 }
 /*header style end*/
+/********************home style start*****************/
+.home{
+    background: url('image/home-bg.jpg') no-repeat;
+    background-size: cover;
+}
+.home{
+    display: flex;
+    justify-content: start;
+    align-items: center;
+}
+.home .content{
+    width: 60rem;
+}
+
+.home .content .hello{
+    font-size: 2rem;
+}
+.home .content .name{
+    font-size: 5rem;
+    text-transform: uppercase;
+    
+    
+}
+.home .content .name span{
+    color: var(--pink);
+    text-transform: uppercase;
+}
+.home .content .sub{
+    font-size: 1.5rem;
+    margin-bottom: 2rem;
+}
+
+/********************home style end*****************/
 
 
 @media (max-width : 768px) {
